修改编译器完成，底层环境准备完成，编译通过

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "bsp_fdcan.h": "c",
         "dm_motor_drv.h": "c",
         "dm_motor_ctrl.h": "c",
-        "exoskeleton_robot.h": "c"
+        "exoskeleton_robot.h": "c",
+        "portable.h": "c"
     }
 }
