usb通信完成,系统状态变量构建完毕

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "dm_motor_drv.h": "c",
         "dm_motor_ctrl.h": "c",
         "exoskeleton_robot.h": "c",
-        "portable.h": "c"
+        "portable.h": "c",
+        "main.h": "c"
     }
 }
