--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "dm_motor_ctrl.h": "c",
         "exoskeleton_robot.h": "c",
         "portable.h": "c",
-        "main.h": "c"
+        "main.h": "c",
+        "usbd_cdc_if.h": "c"
     }
 }
