强化学习控制接口完成，通信测试成功按照commuication.py文件里面的包格式发数据就可以了，完成关节电机的控制，系统初步搭建完成可以使用，加入IMU互补滤波，大幅提升数据精确度，大幅降低加速度计自身误差导致的姿态解算误差

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,10 @@
         "exoskeleton_robot.h": "c",
         "portable.h": "c",
         "main.h": "c",
-        "usbd_cdc_if.h": "c"
+        "usbd_cdc_if.h": "c",
+        "vofa.h": "c",
+        "bmi088reg.h": "c",
+        "bmi088middleware.h": "c",
+        "bmi088driver.h": "c"
     }
 }
