完成通信与坐标系对接

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "vofa.h": "c",
         "bmi088reg.h": "c",
         "bmi088middleware.h": "c",
-        "bmi088driver.h": "c"
+        "bmi088driver.h": "c",
+        "cmsis_os.h": "c"
     }
 }
